@@ -12,14 +12,23 @@
 // ***************************************************************************************************************************
 package org.apache.juneau.utils;
 
-import static org.apache.juneau.common.internal.IOUtils.*;
+import static org.apache.juneau.common.internal.IOUtils.UTF8;
+import static org.apache.juneau.common.internal.IOUtils.read;
 
-import java.io.*;
-import java.net.*;
-import java.util.jar.*;
+import java.io.ByteArrayInputStream;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.Reader;
+import java.net.MalformedURLException;
+import java.net.URL;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.jar.Manifest;
 
-import org.apache.juneau.collections.*;
-import org.apache.juneau.common.internal.*;
+import org.apache.juneau.collections.JsonMap;
+import org.apache.juneau.common.internal.ThrowableUtils;
 
 /**
  * Utility class for working with Jar manifest files.
@@ -37,21 +46,37 @@ public class ManifestFile extends JsonMap {
 
 	private static final long serialVersionUID = 1L;
 
-	/**
-	 * Create an instance of this class from a manifest file on the file system.
-	 *
-	 * @param f The manifest file.
-	 * @throws IOException If a problem occurred while trying to read the manifest file.
-	 */
-	public ManifestFile(File f) throws IOException {
-		Manifest mf = new Manifest();
-		try (FileInputStream fis = new FileInputStream(f)) {
-			mf.read(fis);
-			load(mf);
-		} catch (IOException e) {
-			throw new IOException("Problem detected in MANIFEST.MF.  Contents below:\n"+read(f), e);
-		}
-	}
+    /**
+     * Create an instance of this class from a manifest file on the file system.
+     *
+     * @param f The manifest file.
+     * @throws IOException If a problem occurred while trying to read the manifest file.
+     */
+    public ManifestFile(File f) throws IOException {
+        Manifest mf = new Manifest();
+        try (FileInputStream fis = new FileInputStream(f)) {
+            mf.read(fis);
+            load(mf);
+        } catch (IOException e) {
+            throw new IOException("Problem detected in MANIFEST.MF.  Contents below:\n"+read(f), e);
+        }
+    }
+
+    /**
+     * Create an instance of this class from a manifest path on the file system.
+     *
+     * @param path The manifest path.
+     * @throws IOException If a problem occurred while trying to read the manifest path.
+     */
+    public ManifestFile(Path path) throws IOException {
+        Manifest mf = new Manifest();
+        try (InputStream fis = Files.newInputStream(path)) {
+            mf.read(fis);
+            load(mf);
+        } catch (IOException e) {
+            throw new IOException("Problem detected in MANIFEST.MF.  Contents below:\n"+read(path), e);
+        }
+    }
 
 	/**
 	 * Create an instance of this class from a {@link Manifest} object.
